--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* DEBUG */
 [class*="col-"]{
-  min-height: 100px;
+  /* min-height: 100px; */
   /* border: 1px solid black; */
 }
 main{
@@ -20,7 +20,7 @@ footer{
   margin-bottom: 0;
 }
 .navbar-brand img{
-  width: 18%;
+  width: 150px;
   height: auto;
   position: absolute;
   top: 50%;
@@ -73,6 +73,19 @@ margin-top: 15px;
 
 /* MAIN */
 /* section loghi */
-.loghi{
+#loghi{
   background-color: #f3f5f9;
+  padding: 20px 0 20px;
+}
+#loghi h4{
+  margin-bottom: 40px;
+}
+#loghi img{
+  margin-bottom: 40px;
+}
+#loghi a{
+  font-size: 18px;
+  font-weight: bold;
+  color: #356ae7;;
+  text-decoration: none;
 }
