--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ margin-top: 15px;
 #design-dev .text-design{
   font-size: 25px;
   color: grey;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 #design-dev img{
   width: 60%;
@@ -132,5 +132,7 @@ margin-top: 15px;
 #business h1{
   text-align: center;
   font-weight:bold;
-
+}
+#business .margin{
+  margin-bottom: 30px;
 }
